hard-gists/6504557/run.log
=== Docker Run Log for 6504557 ===
Started at: Mi 29. Okt 16:33:48 CET 2025

[2025-10-29 16:33:49] START: Running container for 6504557
[2025-10-29 16:33:49] SUCCESS: Container 3117a9cae0d8c9b1714b53037f429ace2473e39cc78435ac75619074eb76f4d4 started for 6504557
=== Container logs for 6504557 ===
  File "/snippet.py", line 57
    print decodeQR()
    ^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6504557 ===
[2025-10-29 16:33:51] INFO: Container 3117a9cae0d8c9b1714b53037f429ace2473e39cc78435ac75619074eb76f4d4 has stopped
